Fix post imgs not resizing on smaller screens

--- a/css/style.less
+++ b/css/style.less
@@ -72,9 +72,11 @@ article {
 		}
 	}
 
-	.post-img {
+	.post-img img {
+		max-width: 100%;
 
 	}
+
 	.post-video {
 		position: relative;
 		padding-bottom: 57.25%; /* 16:9 */
